# prompt-finance-hackathon

./: .gitignore  CHALLENGE_README.md  README.md  config.py  docker-compose.yml  pyproject.toml
data/: classifier_baseline_report.json  classifier_hybrid_graph_section_v1_report.json  classifier_hybrid_section_v1_qfi_report.json  classifier_hybrid_section_v1_report.json  classifier_section_v1_qfi_report.json  classifier_section_v1_report.json  expanded_manifest.json  fail_diagnostic_section_v1.json  query_translations.json  question_bank.json  results_baseline.json  results_hybrid_graph_section_v1.json  results_hybrid_section_v1.json  results_hybrid_section_v1_qfi.json  results_section_v1.json  results_section_v1_qfi.json  signals_baseline.json  signals_hybrid_graph_section_v1.json  signals_hybrid_section_v1.json  signals_hybrid_section_v1_qfi.json  signals_section_v1.json  signals_section_v1_qfi.json
frontend/: README.md  server.py
frontend/static/: admin.html  admin.js  app.js  index.html  learn.html  learn.js  roadmap.html  style.css
scripts/: build_index.py  evaluate.py  expand_index.py  extract.py  extract_missing.py  extract_signals.py  fetch_data.py  graph.py  hybrid.py  query_rag.py  query_translate.py  section_parser.py  signals.py  summary.py  train_classifier.py
