[project]
name = "aalto-hackaton-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.13.0",
]
